--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,14 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicon/site.webmanifest">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +38,7 @@
   ======================================================== -->
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="quotes.js"></script>
 
 </head>
@@ -52,7 +55,7 @@
       <div class="profile">
         <img src="assets/img/logo.png" alt="" class="img-fluid">
         <h1 class="text-light" style="text-align: center" ><a href="/">ThinkPos</a></h1>
-        <p class="text-light" style="text-align:center">Make the World a Better Place</p>
+        <p class="text-light" style="text-align:center">Making the World a Better Place</p>
       </div>
 
       <nav class="nav-menu">
@@ -72,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1 style="text-align: center">ThinkPos</h1>
-      <p>Aim to <span class="typed" data-typed-items="Inspire, Educate, Motivate"></span>Others</p>
+      <p>Using Quotes to <span class="typed" data-typed-items="Inspire, Educate, Motivate"></span>Others</p>
     </div>
   </section><!-- End Hero -->
 
@@ -108,6 +111,13 @@
               </div>
 
           </div>
+
+          <div class="row" data-aos="fade-up">
+              <div class="col-lg-12 d-flex justify-content-center">
+                <a href="#portfolio" onclick = "loadQuotes()"><i class="bx bx-revision" style = "font-size: 55px;"></i></a>
+              </div>
+          </div>
+
       </section><!-- End Portfolio Section -->
 
       <!-- ======= Contact Section ======= -->
@@ -120,7 +130,7 @@
               </div>
 
               <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                  <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                  <form action="" method="" role="form" class="php-email-form">
                       <div class="form-row">
                           <div class="form-group col-md-6">
                               <label for="n">Name</label>
@@ -156,12 +166,10 @@
                           <textarea class="form-control" id="m" name="message" rows="10"></textarea>
                           <div class="validate"></div>
                       </div>
-                      <!--<div class="mb-3">-->
-                      <!--<div class="loading">Loading</div>-->
-                      <!--<div class="error-message"></div>-->
-                      <!--<div class="sent-message">Your message has been sent. Thank you!</div>-->
-                      <!--</div>-->
-                      <div class="text-center" onclick="addQuote()"><button type="submit">Submit Quote</button></div>
+                      <p id="error-message"></p>
+                      <p id="sent-message"></p>
+
+                      <div class="text-center" onclick = "addQuote()"><button type="submit">Submit Quote</button></div>
                   </form>
               </div>
 
