--- a/views/index.ejs
+++ b/views/index.ejs
@@ -457,7 +457,7 @@
         &copy; Copyright <strong><span>ThinkPos</span></strong>
       </div>
       <div class="credits">
-        <p>Developed by <a href = "https://ashayp.com/" >Ashay Parikh</a>, Abhi Nayak, Skyler Gao</p>
+        <p>Developed by <a href = "https://ashayp.com/" target="_blank">Ashay Parikh</a>, Abhi Nayak, Skyler Gao</p>
         <p style = "font-size: 10px">S/O <a href="https://bootstrapmade.com/">BootstrapMade</a></p>
       </div>
     </div>
