--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,13 +30,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio - v1.3.0
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="quotes.js"></script>
@@ -72,9 +65,9 @@
       <nav class="nav-menu">
           <ul>
               <li class="active"><a href="/"><i class="bx bx-home"></i><span>Home</span></a></li>
-              <li><a href="#portfolio"><i class="bx bx-book-content"></i>Quotes</a></li>
-              <li><a href="#contact"><i class="bx bxs-pencil"></i>Create</a></li>
-              <li><a href="#about"><i class="bx bx-user"></i><span>Our Mission</span></a></li>
+              <li><a href="#quotes"><i class="bx bx-book-content"></i>Quotes</a></li>
+              <li><a href="#create"><i class="bx bxs-pencil"></i>Create</a></li>
+              <li><a href="#mission"><i class="bx bx-user"></i><span>Our Mission</span></a></li>
           </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -93,7 +86,7 @@
   <main id="main">
 
       <!-- ======= Portfolio Section ======= -->
-      <section id="portfolio" class="portfolio section-bg">
+      <section id="quotes" class="portfolio section-bg">
           <div id="containerdiv" class="container" style="height:600px; overflow:auto">
 
               <div class="section-title">
@@ -132,7 +125,7 @@
       </section><!-- End Portfolio Section -->
 
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
+      <section id="create" class="contact">
           <div class="container">
 
               <div class="section-title">
@@ -437,7 +430,7 @@
           </div>
       </section><!-- End Contact Section -->
 
-      <section id="about" class="about">
+      <section id="mission" class="about">
           <div class="container">
 
               <div class="section-title">
