--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,7 @@
 
           <div class="row" data-aos="fade-up">
               <div class="col-lg-12 d-flex justify-content-center">
-                <a href="#portfolio" onclick = "loadQuotes()"><i class="bx bx-revision" style = "font-size: 55px;"></i></a>
+                <a href="#quotes" onclick = "loadQuotes()"><i class="bx bx-revision" style = "font-size: 55px;"></i></a>
               </div>
           </div>
 
