--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,13 +58,13 @@
 
       <div class="profile">
         <img src="assets/img/logo.png" alt="" class="img-fluid">
-        <h1 class="text-light" style="text-align: center" ><a href="/">ThinkPos</a></h1>
+        <h1 class="text-light" style="text-align: center" ><a href="#hero">ThinkPos</a></h1>
         <p class="text-light" style="text-align:center">Making the World a Better Place</p>
       </div>
 
       <nav class="nav-menu">
           <ul>
-              <li class="active"><a href="/"><i class="bx bx-home"></i><span>Home</span></a></li>
+              <li class="active"><a href="#hero"><i class="bx bx-home"></i><span>Home</span></a></li>
               <li><a href="#quotes"><i class="bx bx-book-content"></i>Quotes</a></li>
               <li><a href="#create"><i class="bx bxs-pencil"></i>Create</a></li>
               <li><a href="#mission"><i class="bx bx-user"></i><span>Our Mission</span></a></li>
