added contact info

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -451,6 +451,7 @@
       </div>
       <div class="credits">
         <p>Developed by <a href = "https://ashayp.com/" target="_blank">Ashay Parikh</a>, Abhi Nayak, Skyler Gao</p>
+        <p><a href = "mailto:team@thinkpos.us">Contact Us</a></p>
         <p style = "font-size: 10px">S/O <a href="https://bootstrapmade.com/">BootstrapMade</a></p>
       </div>
     </div>
