added contact info

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -435,8 +435,13 @@
 
               <div class="section-title">
                   <h2>Mission Statement</h2>
-                  <p>Our goal is to spread positivity through personal quotes made by people who come from various backgrounds across the globe. We hope to provide a user-friendly platform where unique individuals can share their beliefs, ideas, and opinions on all kinds of issues that are prevalent in our lives today.</p>
+                  <p>Our goal is to spread positivity through personal quotes made by people who come from various backgrounds across the globe. We hope to provide a user-friendly platform where unique individuals can share their beliefs, ideas, and opinions on all kinds of issues that are prevalent in our lives today.
+                    <br><br>
+                    We appreciate any feedback from people who use this platform. If you have any questions, comments, or concerns, feel free <a href = "mailto:team@thinkpos.us">to reach out and contact us</a>.
+                  </p>
               </div>
+
+
 
           </div>
       </section><!-- End About Section -->
@@ -451,7 +456,6 @@
       </div>
       <div class="credits">
         <p>Developed by <a href = "https://ashayp.com/" target="_blank">Ashay Parikh</a>, Abhi Nayak, Skyler Gao</p>
-        <p><a href = "mailto:team@thinkpos.us">Contact Us</a></p>
         <p style = "font-size: 10px">S/O <a href="https://bootstrapmade.com/">BootstrapMade</a></p>
       </div>
     </div>
