added http route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,13 @@
   gtag('config', 'UA-155101938-3');
 </script>
 
+<script>
+  //redirect to http
+if (location.protocol !== 'http:') {
+    location.replace(`http:${location.href.substring(location.protocol.length)}`);
+}
+</script>
+
 
 </head>
 
