--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,9 +46,9 @@
 
 <script>
   //redirect to http
-if (location.protocol !== 'http:') {
-    location.replace(`http:${location.href.substring(location.protocol.length)}`);
-}
+// if (location.protocol !== 'http:') {
+//     location.replace(`http:${location.href.substring(location.protocol.length)}`);
+// }
 </script>
 
 
